# chainlit-demo

./: .gitignore  README.md  agents.py  chainlit_app.py  chainlit_process.py  main.py  main_part2.py  mcp_server.py  process.py  pyproject.toml
agents/: code_agent_spec.yaml  copy_writer_agent_spec.yaml  editor_agent_spec.yaml  web_search_agent_spec.yaml  web_search_azure_agent_spec.yaml
data/: output.jsonl  parse.py
data/chroma/: chroma.sqlite3
