[project]
name = "chainlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "semantic-kernel[azure,mcp,ollama,chroma] @ git+https://github.com/eavanvalkenburg/semantic-kernel@hybrid_search#subdirectory=python",
]

[tool.uv]
prerelease = 'allow'
