[project]
name = "chainlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "semantic-kernel[azure,mcp,ollama,chroma] @ C:\\Work\\sk\\semantic-kernel\\python",
]

[tool.uv]
prerelease = 'allow'
